--- a/world/kxmlgui/PKGBUILD
+++ b/world/kxmlgui/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kxmlgui
-pkgver=6.14.0
+pkgver=6.15.0
 pkgrel=1
 pkgdesc='User configurable main windows'
 arch=(x86_64)
@@ -26,12 +26,11 @@ makedepends=(doxygen
              pyside6
              python-build
              python-setuptools
-             qt6-doc
              qt6-tools)
 optdepends=('pyside6: Python bindings')
 groups=(kf6)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('5f9a35d168e5be85c43e566f87bf7108c18e3a19420e1d9379b493e28880914b'
+sha256sums=('40ce8d472d171a819806af0d5a68c3f91d596b5ae8b4b29c46592a0978d7c305'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB  # David Faure <faure@kde.org>
               E0A3EB202F8E57528E13E72FD7574483BB57B18D  # Jonathan Esk-Riddell <jr@jriddell.org>
@@ -40,8 +39,7 @@ validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB  # David Faure <faure@kde
 build() {
   cmake -B build -S $pkgname-$pkgver \
     -DCMAKE_INSTALL_LIBEXECDIR=lib \
-    -DBUILD_TESTING=OFF \
-    -DBUILD_QCH=ON
+    -DBUILD_TESTING=OFF
   cmake --build build
 }
 
