--- a/world/maturin/PKGBUILD
+++ b/world/maturin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=(
   python-maturin
 )
 pkgver=1.8.7
-pkgrel=1
+pkgrel=2
 pkgdesc="Build and publish crates with pyo3, rust-cpython and cffi bindings"
 url="https://github.com/PyO3/maturin"
 arch=(x86_64)
@@ -44,8 +44,7 @@ prepare() {
 
 build() {
   cd $pkgbase
-  MATURIN_SETUP_ARGS="--frozen --all-features" \
-    python -m build --wheel --no-isolation
+  MATURIN_SETUP_ARGS="--frozen" python -m build --wheel --no-isolation
 }
 
 check() {
