--- a/world/miniupnpc/.artixlinux/pkgbase.yaml
+++ b/world/miniupnpc/.artixlinux/pkgbase.yaml
@@ -1,15 +1,7 @@
 ---
-pkgbase:
-  name: miniupnpc
-  version: 2.3.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - miniupnpc
-    - python-miniupnpc
 actions:
   addRepo: world
-  removeRepo: world-gremlins
+  removeRepo: world-goblins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.3.0-1
+    version: 2.3.3-1
     packages:
-      - miniupnpc-2.3.0-1-x86_64.pkg.tar.zst
-      - python-miniupnpc-2.3.0-1-x86_64.pkg.tar.zst
+      - miniupnpc-2.3.3-1-x86_64.pkg.tar.zst
+      - python-miniupnpc-2.3.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
