--- a/world/solid/PKGBUILD
+++ b/world/solid/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=solid
-pkgver=6.14.0
+pkgver=6.15.0
 pkgrel=1
 pkgdesc='Hardware integration and detection'
 arch=(x86_64)
@@ -22,12 +22,11 @@ depends=(gcc-libs
 makedepends=(doxygen
              extra-cmake-modules
              qt6-declarative
-             qt6-doc
              qt6-tools)
 optdepends=('qt6-declarative: QML bindings')
 groups=(kf6)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('00996f063478863fe61b902d20c96c9eb4f4ac43353e59b779b466fa62b1a8c4'
+sha256sums=('608b2d3ad987369718a2fe8a5fa7b71c75faa51a20eaff5ba6b0edf0e5ebbb4a'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.org>
               E0A3EB202F8E57528E13E72FD7574483BB57B18D # Jonathan Esk-Riddell <jr@jriddell.org>
@@ -36,8 +35,7 @@ validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
-    -DBUILD_TESTING=OFF \
-    -DBUILD_QCH=ON
+    -DBUILD_TESTING=OFF
   cmake --build build
 }
 
