--- a/world/sonnet/PKGBUILD
+++ b/world/sonnet/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=sonnet
-pkgver=6.14.0
+pkgver=6.15.0
 pkgrel=1
 pkgdesc='Spelling framework for Qt'
 arch=(x86_64)
@@ -19,7 +19,6 @@ makedepends=(aspell
              hunspell
              libvoikko
              qt6-declarative
-             qt6-doc
              qt6-tools)
 optdepends=('aspell: spell checking via aspell'
             'hspell: spell checking for Hebrew'
@@ -28,7 +27,7 @@ optdepends=('aspell: spell checking via aspell'
             'qt6-declarative: QML bindings')
 groups=(kf6)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('a0de64c132c08d4986b00de9ee8e299615ad50008b14e26910fcefcad734afd3'
+sha256sums=('0f7c7315afbaf2c8f7d898d4a960c5bbab851e65338f79aee54f76e925234886'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.org>
               E0A3EB202F8E57528E13E72FD7574483BB57B18D # Jonathan Esk-Riddell <jr@jriddell.org>
@@ -37,8 +36,7 @@ validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB # David Faure <faure@kde.
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
-    -DBUILD_TESTING=OFF \
-    -DBUILD_QCH=ON
+    -DBUILD_TESTING=OFF
   cmake --build build
 }
 
