--- a/world/dolphin-emu/.artixlinux/pkgbase.yaml
+++ b/world/dolphin-emu/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: dolphin-emu
-  version: 1:2503-2
-  arch:
-    - x86_64
-  pkgname:
-    - dolphin-emu
-    - dolphin-emu-tool
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-goblins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:2503-2
+    version: 1:2503-3
     packages:
-      - dolphin-emu-1:2503-2-x86_64.pkg.tar.zst
-      - dolphin-emu-tool-1:2503-2-x86_64.pkg.tar.zst
+      - dolphin-emu-1:2503-3-x86_64.pkg.tar.zst
+      - dolphin-emu-tool-1:2503-3-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
