--- a/world/libfido2/.artixlinux/srcinfo.yaml
+++ b/world/libfido2/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 1.16.0-1
+version: 1.16.0-2
 pkgbase:
   name: libfido2
   pkgdesc: Library functionality for FIDO 2.0, including communication with a device over USB
   pkgver: 1.16.0
-  pkgrel: 1
+  pkgrel: 2
   url: https://developers.yubico.com/libfido2/
   arch:
     - x86_64
@@ -20,6 +20,7 @@ pkgbase:
     - libcbor.so
     - hidapi
     - libudev
+    - libudev.so
     - zlib
   provides:
     - libfido2.so
@@ -39,4 +40,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: libfido2
-# generated with artixpkg 0.36.0-3-any
+# generated with artixpkg 0.36.4-1-any
