--- a/world/hdf5/.artixlinux/pkgbase.yaml
+++ b/world/hdf5/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: hdf5
-  version: 1.14.6-4
-  arch:
-    - x86_64
-  pkgname:
-    - hdf5
-    - hdf5-openmpi
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.14.6-4
+    version: 1.14.6-5
     packages:
-      - hdf5-1.14.6-4-x86_64.pkg.tar.zst
-      - hdf5-openmpi-1.14.6-4-x86_64.pkg.tar.zst
+      - hdf5-1.14.6-5-x86_64.pkg.tar.zst
+      - hdf5-openmpi-1.14.6-5-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
