--- a/world/libaec/PKGBUILD
+++ b/world/libaec/PKGBUILD
@@ -1,26 +1,30 @@
 # Maintainer: Cory Sanin <corysanin@artixlinux.org>
 # Contributor: Bruno Pagani <archange@archlinux.org>
+# Contributor: Carl Smedstad <carsme@archlinux.org>
 
 pkgname=libaec
 pkgver=1.1.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Adaptive Entropy Coding library"
 arch=(x86_64)
 url="https://gitlab.dkrz.de/k202009/libaec"
-license=(custom)
+license=(BSD-2-Clause)
 depends=(glibc)
 makedepends=(cmake)
-source=(${url}/-/archive/v${pkgver}/${pkgname}-v${pkgver}.tar.bz2)
+source=("${url}/archive/v${pkgver}/${pkgname}-v${pkgver}.tar.bz2")
 sha256sums=('cf869c166656a83857adf62a092311a0069855c6ced3446e3f090a6d52279f65')
 
 build() {
   cmake -B build -S ${pkgname}-v${pkgver} \
+    -DCMAKE_BUILD_TYPE=None \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_BUILD_TYPE=Release
-  make -C build
+    -Wno-dev \
+    -DBUILD_STATIC_LIBS=OFF
+  cmake --build build
 }
 
 package() {
-  make -C build DESTDIR="${pkgdir}" install
-  install -Dm644 ${pkgname}-v${pkgver}/LICENSE.txt -t "${pkgdir}"/usr/share/licenses/${pkgname}/
+  DESTDIR="$pkgdir" cmake --install build
+  install -vDm644 -t "${pkgdir}/usr/share/licenses/${pkgname}" \
+    ${pkgname}-v${pkgver}/LICENSE.txt
 }
