--- a/galaxy/avidemux/.artixlinux/pkgbase.yaml
+++ b/galaxy/avidemux/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: avidemux
-  version: 2.8.1-6
-  arch:
-    - x86_64
-  pkgname:
-    - avidemux-cli
-    - avidemux-qt
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 2.8.1-6
+    version: 2.8.1-8
     packages:
-      - avidemux-cli-2.8.1-6-x86_64.pkg.tar.zst
-      - avidemux-qt-2.8.1-6-x86_64.pkg.tar.zst
+      - avidemux-cli-2.8.1-8-x86_64.pkg.tar.zst
+      - avidemux-qt-2.8.1-8-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
