--- a/galaxy/libsfdo/.artixlinux/pkgbase.yaml
+++ b/galaxy/libsfdo/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: libsfdo
-  version: 0.1.3-2.1
-  arch:
-    - x86_64
-  pkgname:
-    - libsfdo
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.1.3-2.1
+    version: 0.1.4-1
     packages:
-      - libsfdo-0.1.3-2.1-x86_64.pkg.tar.zst
+      - libsfdo-0.1.4-1-x86_64.pkg.tar.zst
+    debug: []
