--- a/galaxy/qt5pas/.artixlinux/pkgbase.yaml
+++ b/galaxy/qt5pas/.artixlinux/pkgbase.yaml
@@ -1,54 +1,60 @@
 ---
-pkgbase:
-  name: qt5pas
-  version: 1:1.2.15-1
-  arch:
-    - x86_64
-  pkgname:
-    - qt5pas
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 1:1.2.15-1
+    version: 1:1.2.15-2
     packages:
-      - qt5pas-1:1.2.15-1-x86_64.pkg.tar.zst
+      - qt5pas-1:1.2.15-2-x86_64.pkg.tar.zst
+    debug: []
+team: galaxy
